--- a/Juego.vcxproj.filters
+++ b/Juego.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="VECTOR2D.h">
+    <ClInclude Include="src\VECTOR2D.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="VECTOR2D.cpp">
+    <ClCompile Include="src\VECTOR2D.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
