--- a/Juego.vcxproj
+++ b/Juego.vcxproj
@@ -19,10 +19,17 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="mundo.h" />
+    <ClInclude Include="raton.h" />
     <ClInclude Include="src\VECTOR2D.h" />
+    <ClInclude Include="tablero.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="mundo.cpp" />
+    <ClCompile Include="principal.cpp" />
+    <ClCompile Include="raton.cpp" />
     <ClCompile Include="src\VECTOR2D.cpp" />
+    <ClCompile Include="tablero.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
@@ -120,6 +127,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
