--- a/Juego.vcxproj
+++ b/Juego.vcxproj
@@ -19,16 +19,30 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\alfil.h" />
+    <ClInclude Include="src\caballo.h" />
     <ClInclude Include="src\mundo.h" />
+    <ClInclude Include="src\peon.h" />
+    <ClInclude Include="src\pieza.h" />
     <ClInclude Include="src\raton.h" />
+    <ClInclude Include="src\reina.h" />
+    <ClInclude Include="src\rey.h" />
     <ClInclude Include="src\tablero.h" />
+    <ClInclude Include="src\torre.h" />
     <ClInclude Include="src\VECTOR2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\alfil.cpp" />
+    <ClCompile Include="src\caballo.cpp" />
     <ClCompile Include="src\mundo.cpp" />
+    <ClCompile Include="src\peon.cpp" />
+    <ClCompile Include="src\pieza.cpp" />
     <ClCompile Include="src\principal.cpp" />
     <ClCompile Include="src\raton.cpp" />
+    <ClCompile Include="src\reina.cpp" />
+    <ClCompile Include="src\rey.cpp" />
     <ClCompile Include="src\tablero.cpp" />
+    <ClCompile Include="src\torre.cpp" />
     <ClCompile Include="src\VECTOR2D.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
